# OfflineRayTracer

./: .gitignore  CMakeLists.txt  main.cpp
Math/: CMakeLists.txt
Math/include/Math/: vector3.hpp
Math/source/: vector3.cpp
Renderer/: CMakeLists.txt
Renderer/include/Renderer/: Ray.hpp
Renderer/source/: Ray.cpp
source/: main.cpp
